syntax = "proto3";
package nimbus;

message RegisterPeer {
  string id = 1;
  int32 serial = 2;
}

message RegisterPeerResponse { bool request_pk = 2; }

message RegisterPk {
  string id = 1;
  bytes uuid = 2;
  bytes pk = 3; // public key
  string old_id = 4;
}

message RegisterPkResponse {
  enum Result {
    OK = 0;
    UUID_MISMATCH = 2;
    ID_EXISTS = 3;
    TOO_FREQUENT = 4;
    INVALID_ID_FORMAT = 5;
    NOT_SUPPORT = 6;
    SERVER_ERROR = 7;
  }
  Result result = 1;
}

enum NatType {
  UNKNOWN_NAT = 0;
  ASYMMETRIC = 1;
  SYMMETRIC = 2;
}

message PunchHole {
  bytes socket_addr = 1;
  string relay_server = 2;
  NatType nat_type = 3;
}

message ConfigUpdate {
  int32 serial = 1;
  repeated string rendezvous_servers = 2;
}

message TestNatRequest { int32 serial = 1; }

message TestNatResponse { int32 port = 1; }

message RendezvousMessage {
  oneof union {
    RegisterPeer register_peer = 6;
    RegisterPeerResponse register_peer_response = 7;
    ConfigUpdate configure_update = 14;
    RegisterPk register_pk = 15;
    RegisterPkResponse register_pk_response = 16;
    TestNatRequest test_nat_request = 20;
    TestNatResponse test_nat_response = 21;
  }
}
